--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,6 +73,12 @@ set(SRC_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/jni/cn_netdiscovery_monica_opencv_ImageProcess.h
         ${CMAKE_CURRENT_SOURCE_DIR}/jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp
 
+        ${CMAKE_CURRENT_SOURCE_DIR}/jni/utils/jni_utils.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/jni/utils/jni_utils.cpp
+
+        ${CMAKE_CURRENT_SOURCE_DIR}/jni/color_correction/color_correction_internal.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/jni/color_correction/jni_color_correction.cpp
+
         ${CMAKE_SOURCE_DIR}/include/colorcorrection/ColorCorrection.h
         ${CMAKE_CURRENT_SOURCE_DIR}/colorcorrection/ColorCorrection.cpp
 
